# OnlineStore

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copy.sh  docker-compose-dev.yaml  docker-compose-prod.yaml
backend/: .env.example  .gitignore  pyproject.toml
backend-fastapi/: .env  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose-dev.yaml  docker-compose-prod.yaml  pyproject.toml
backend-fastapi/.github/workflows/: deploy.yaml
backend-fastapi/api/: config.py  requirements.txt
backend-fastapi/api/database/: database.py  models.py
backend-fastapi/api/migrations/versions/: c3ea7e348c4e_init.py
backend-fastapi/api/src/: app.py  utils.py  worker.py
backend-fastapi/api/src/v1/: api.py  auth.py  external.py  user.py
backend-fastapi/db_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
backend-fastapi/db_data/base/5/: 1247  1249  1259  16389  16392  16396  16397  16398  16402  16403  16407  16412  16413  16414  16418  16419  16425  16427  16429  16435  16441  16447  16448  16450  16456  16459  16468  16477  16484  (+47 more)
backend-fastapi/db_data/global/: 1260  pg_control  pg_internal.init
backend-fastapi/db_data/pg_stat/: pgstat.stat
backend-fastapi/dumps/: 2023-12-28_12-43-30.dump  2023-12-30_02-30-00.dump  main.sql
backend/api/: config.py  requirements.txt
backend/api/database/: models.py
backend/api/src/: app.py  utils.py  worker.py
backend/backend/: settings.py  urls.py
backend/dumps/: main.sql
backend/online_shop/: models.py  serializers.py  views.py
backend/online_shop/migrations/: 0001_initial.py
(+48 files in other folders)
